docs: add documentation for list opening
